[tool.poetry]
name = "dbconnector"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "main", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
psutil = "^6.0.0"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
jwt = "^1.3.1"
pyjwt = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
main = 'main.entry_point:main'
main_dbconnector = 'dbconnector.main:main'
main_logger = 'custom_logger.main:main'
main_fast = 'fast_api.main:main'
main_airflow = 'airflow_clone.main:main'